<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="app_msg_welcome">Olá, Leandro</string>
    <string name="app_msg_agency">Ag 2030</string>
    <string name="app_msg_current_account">Cc 01097954-4</string>
    <string name="app_msg_balance_available">Saldo disponível</string>
    <string name="app_msg_limit_balance">Saldo + Limite:</string>
    <string name="app_msg_see_extract">Ver Extrato</string>
    <string name="app_msg_pay">Pagar</string>
    <string name="app_msg_transfer">Transferir</string>
    <string name="app_msg_recharging">Recarregar</string>
    <string name="app_msg_final_card">Cartão final</string>
</resources>